syntax = "proto3";

package chatservice;

option java_multiple_files = true;
option java_package = "com.hab.grpc.chatservice";
option java_outer_classname = "ChatService";

message NewPeerRequest{
    string user_id = 1;
}

message NewPeerResponse{
    int32 response_code = 1;
}

message SearchingPeerRequest {
    string user_id = 1;
    int32 radius_distance_in_meters = 2;
    string status = 3;
}

message SearchingPeerResponse {
    int32 response_code = 1;
    string user_id = 2;
    int32 radius_distance_in_meters = 3;
    string status = 4;
}

message NewMessageRequest {
    string user_id = 1;
    string message = 2;
}

message NewMessageResponse {
    int32 response_code = 1;
    string message = 2;
}

message PeerClosedRequest{
    string user_id = 1;
}

message PeerClosedResponse{
    int32 response_code = 1;
}

service Chat {
    rpc NewPeer (NewPeerRequest) returns (NewPeerResponse) {}
    rpc SearchingPeer(SearchingPeerRequest) returns (stream SearchingPeerResponse) {}
    rpc NewMessage (NewMessageRequest) returns (stream NewMessageResponse) {}
    rpc PeerClosed (PeerClosedRequest) returns (PeerClosedResponse) {}
}
